~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 7.0 version:

* New convenience RPM macro %postgresql_module_requires.

* Simplified build against SCLs with --with-scl option.

* The %pgtest_init && %pgtest_start renamed to %postgresql_tests_init and
  %postgresql_tests_start.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 6.0 version

* Dropped dependency on /bin/find utility.

* The postgresql-setup doesn't need root permissions.  It is better to not
  run this script as 'root' user from now.

Incompatible changes in 6.0 version

* The postgresql-setup doesn't support --new-systemd-unit option.  Please use
  postgresql-new-systemd-unit script instead (as 'root').

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 5.1 version

* The rpm macro directory is automatically detected.

* the sysvinit/systemd systems are now detected

* properly generate manpage with help2man

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 5.0 version

* postgresql-setup --upgrade now works with "umask & 0004 != 0"

* Fixed semantics of 'redhat_sockets_hack' configuration option.

* The RPM macros file is installed automatically, it provides now
  %postgresql_major, %pgtests_init and %pgtests_start macros.

* Fixed automatic detection of $PGMAJORVERSION.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 4.0 version:

* The postgresql-upgrade package is now optional packaging feature, for the
  postgresql-setup --upgrade scenario it might/might not be needed.

* Additional check for correct postgres's $HOME permissions implemented.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 3.5 version

* Fix spelling in error message regarding data-dir mountpoint.

* Fix testsuite for SCL.

* Fix documentation regarding --initdb (we require root actually).
